--- a/Geranium/Translations/Localizable.xcstrings
+++ b/Geranium/Translations/Localizable.xcstrings
@@ -7584,7 +7584,7 @@
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Unsupervise"
+            "value" : "Rimuovi la supervisione"
           }
         },
         "ja" : {
